# didpoop

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Migrant.toml  README.md  docker.sh
migrations/20220117182025_initial/: down.sql  up.sql
migrations/20220117182421_idgen/: down.sql  up.sql
migrations/20220117182946_users/: down.sql  up.sql
migrations/20220119020043_creatures/: down.sql  up.sql
migrations/20220122012539_poops/: down.sql  up.sql
src/: config.rs  crypto.rs  error.rs  loaders.rs  main.rs  models.rs  schema.rs
