[package]
name = "didpoop"
version = "0.1.0"
edition = "2021"
categories = ["caching"]

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
async-graphql = { version = "3" , features = ["tracing", "chrono", "dataloader"]}
async-graphql-warp = { version = "3" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
bdays = "0.1"
cached = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "json", "postgres", "chrono", "offline", "macros" ] }
hex = "0.4"
ring = "0.16"
dotenv = "0.15"
lazy_static = "1"
thiserror = "1"
async-trait = "0.1"
